<resources>
    <string name="app_name">CashManager</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="title_activity_pantalla_inicio">PantallaInicioActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="cashmanager_logo">CashManager</string>
    <string name="forgot_pass">Olvidé mi Contraseña</string>
    <string name="categor_as">Categorías</string>
    <string name="consultar_movimientos">Consultar Movimientos</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="gasto">Gasto</string>
    <string name="ingreso">Ingreso</string>
    <string name="transferencia">Transferencia</string>
    <string name="ltimos_movimientos">Últimos Movimientos</string>
    <string name="resumen_mensual">Resumen Mensual</string>
    <string name="cambiar_nombre">Cambiar Nombre</string>
    <string name="agregar_cuenta">Agregar Cuenta</string>
    <string name="inicio">Inicio</string>
    <string name="tranferencia_entre_cuentas">Tranferencia entre cuentas</string>
    <string name="selecciona_la_cuenta_para_tu_transferencia_origen">Selecciona la cuenta para tu transferencia (Origen)</string>
    <string name="selecciona_la_cuenta_para_tu_transferencia_destino">Selecciona la cuenta para tu transferencia (Destino)</string>
    <string name="ingresa_el_monto_de_transferencia">Ingresa el monto de transferencia</string>
    <string name="ingresa_una_descripci_n">Ingresa una descripción</string>
    <string name="transferir">Transferir</string>
    <string name="transferencia_">TRANSFERENCIA</string>
    <string name="ultimos_movimientos">ULTIMOS MOVIMIENTOS</string>
    <string name="seleccionar_cuenta">Seleccionar cuenta</string>
    <string name="mostrar_ultimos_5_movimientos">Mostrar ultimos 5 movimientos</string>
    <string name="resumen_mensual_">RESUMEN MENSUAL</string>
    <string name="registrar">Registrar</string>
    <string name="selecciona_la_categoria_de_ingreso">Selecciona la categoria de ingreso:</string>
    <string name="registra_la_descripci_n_de_tu_ingreso">Registra la descripción de tu ingreso:</string>
    <string name="registra_el_monto_de_tu_ingreso">Registra el monto de tu ingreso:</string>
    <string name="registrar_ingreso">Registrar ingreso:</string>
    <string name="cuenta_principal_seleccionada">cuenta principal seleccionada</string>
    <string name="ingreso_">INGRESO</string>
    <string name="gasto_">Gasto</string>
    <string name="cuenta_principal_seleccionada_">Cuenta principal seleccionada</string>
    <string name="registra_el_gasto">Registra el gasto</string>
    <string name="registra_el_monto_de_tu_gasto">Registra el monto de tu gasto</string>
    <string name="registra_la_descripci_n_de_tu_gasto">Registra la descripción de tu gasto:</string>
    <string name="selecciona_la_categoria_del_gasto">Selecciona la categoria del gasto:</string>
    <string name="registrar_">Registrar</string>
    <string name="eliminar_cuenta_">ELIMINAR CUENTA</string>
    <string name="seleccionar_una_cuenta">Seleccionar una cuenta</string>
    <string name="cuentas_registradas">Cuentas registradas</string>
    <string name="opciones">Opciones</string>
    <string name="consultar">Consultar</string>
    <string name="seleccionar_categoria">Seleccionar categoria</string>
    <string name="reporte_por_categorias">REPORTE POR CATEGORIAS</string>
    <string name="mostrar">Mostrar</string>
    <string name="cambiar_nombre_cuenta">CAMBIAR NOMBRE CUENTA</string>
    <string name="selecciona_una_cuenta">Selecciona una cuenta</string>
    <string name="ingresa_el_nuevo_nombre">Ingresa el nuevo nombre:</string>
    <string name="escribir_el_nombre">escribir el nombre</string>
    <string name="cambiar">Cambiar</string>
    <string name="agregar_cuenta_">AGREGAR CUENTA</string>
    <string name="consultar_movimientos_">CONSULTAR MOVIMIENTOS</string>
    <string name="gasto_title">GASTO</string>
    <string name="gestor_de_gastos">Gestor de Gastos</string>
    <string name="registro">Registro</string>
    <string name="ingresa_los_siguientes_datos">Ingresa los siguientes datos</string>
    <string name="nombre_y_apellidos">Nombre y Apellidos</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="regresar_a_login">Regresar a Login</string>
    <string name="login">Login</string>
    <string name="registrate_aqui">¿No tienes una cuenta? Registrate Aquí</string>

</resources>